# TaskTracker

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
config/: urls.py
config/settings/: __init__.py  base.py  celery.py  const.py  database.py  drf.py
src/: router.py
src/core/: apps.py  choices.py  mixins.py  utils.py
src/notification/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/notification/migrations/: 0001_initial.py
src/tasks/todo/: services.py  tasks.py
src/todo/: admin.py  serializers.py  urls.py  views.py
src/todo/migrations/: 0001_initial.py  0002_task_status.py  0003_task_updated_at.py
src/todo/models/: __init__.py  other.py  task.py
